fix(SelectInput): menu colors for dark mode (#67)

--- a/src/components/SelectInput/SelectInput.module.scss
+++ b/src/components/SelectInput/SelectInput.module.scss
@@ -25,7 +25,6 @@
   @extend %react-select-icon;
 }
 
-// stylelint-disable
 @mixin size-sm {
   :global(.react-select__control) {
     border-radius: var(
@@ -201,6 +200,16 @@
       }
     }
 
+    :global(.react-select__option--is-selected),
+    :global(.react-select__option--is-focused) {
+      background-color: var(--color-background-tertiary);
+    }
+
+    :global(.react-select__option),
+    :global(.react-select__single-value) {
+      color: var(--color-font-base);
+    }
+
     :global(.react-select__control) {
       line-height: var(
         --form-control-line-height,
@@ -220,10 +229,7 @@
       }
 
       :global(.react-select__placeholder) {
-        color: var(
-          --form-control-placeholder-color,
-          var(--INTERNAL_form-control-placeholder-color)
-        );
+        color: var(--color-font-placeholder);
       }
 
       :global(.react-select__clear-indicator) {
@@ -253,16 +259,15 @@
 
       &:global(.react-select__control--is-disabled) {
         :global(.react-select__dropdown-indicator) {
-          color: var(
-            --form-control-placeholder-color,
-            var(--INTERNAL_form-control-placeholder-color)
-          );
+          color: var(--color-font-disabled);
         }
       }
     }
 
     :global(.react-select__menu) {
       z-index: var(--size-z-index-popover);
+      background-color: var(--color-background-primary);
+      border-color: var(--color-border-default);
     }
 
     &.error {
