--- a/src/components/TextareaInput/TextareaInput.module.scss
+++ b/src/components/TextareaInput/TextareaInput.module.scss
@@ -139,10 +139,7 @@
 
     &::placeholder {
       opacity: 1;
-      color: var(
-        --form-control-placeholder-color,
-        var(--INTERNAL_form-control-placeholder-color)
-      );
+      color: var(--color-font-placeholder);
     }
 
     &:focus {
